fix grid-style overflow at max of 5 cells on small sidebar

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -93,7 +93,7 @@
 
 .grid-style > * {
     background: hsla(var(--bghs), calc(var(--scheme) (var(--scheme) var(--bgl) + 12%)), 0.4);
-    padding: 2px 10px;
+    padding: 2px 4px;
     border-radius: var(--border-radius);
     font-size: 1rem;
     flex: 1;
